[package]
name = "fight-the-bad-guys"
version = "0.1.0"
authors = ["wwwiop <daniel@dirksen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
rand = "0.8.1"

[[bin]]
name = "fight-the-bad-guys"
path = "main.rs"
